@@ -17,6 +17,7 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import io.airlift.log.Logger;
 import io.airlift.log.Logging;
+import io.trino.Session;
 import io.trino.hdfs.DynamicHdfsConfiguration;
 import io.trino.hdfs.HdfsConfig;
 import io.trino.hdfs.HdfsConfigurationInitializer;
@@ -31,10 +32,10 @@ import io.trino.plugin.hive.metastore.thrift.BridgingHiveMetastore;
 import io.trino.plugin.hive.s3.HiveS3Config;
 import io.trino.plugin.hive.s3.TrinoS3ConfigurationInitializer;
 import io.trino.plugin.hudi.testing.HudiTablesInitializer;
-import io.trino.plugin.hudi.testing.ResourceHudiTablesInitializer;
-import io.trino.spi.connector.CatalogSchemaName;
+import io.trino.plugin.hudi.testing.TpchHudiTablesInitializer;
 import io.trino.spi.security.PrincipalType;
 import io.trino.testing.DistributedQueryRunner;
+import io.trino.tpch.TpchTable;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
 
@@ -48,41 +49,23 @@ import static io.trino.plugin.hive.containers.HiveMinioDataLake.MINIO_SECRET_KEY
 import static io.trino.testing.DistributedQueryRunner.builder;
 import static io.trino.testing.TestingConnectorSession.SESSION;
 import static io.trino.testing.TestingSession.testSessionBuilder;
+import static org.apache.hudi.common.model.HoodieTableType.COPY_ON_WRITE;
 
 public final class S3HudiQueryRunner
 {
-    static final CatalogSchemaName HUDI_MINIO_TESTS = new CatalogSchemaName("hudi", "miniotests");
+    private static final String TPCH_SCHEMA = "tpch";
     private static final HdfsContext CONTEXT = new HdfsContext(SESSION);
 
     private S3HudiQueryRunner() {}
 
     public static DistributedQueryRunner create(
-            String catalogName,
-            String schemaName,
-            Map<String, String> connectorProperties,
-            HudiTablesInitializer dataLoader,
-            HiveMinioDataLake hiveMinioDataLake)
-            throws Exception
-    {
-        return create(
-                catalogName,
-                schemaName,
-                ImmutableMap.of(),
-                connectorProperties,
-                dataLoader,
-                hiveMinioDataLake);
-    }
-
-    public static DistributedQueryRunner create(
-            String catalogName,
-            String schemaName,
             Map<String, String> extraProperties,
             Map<String, String> connectorProperties,
             HudiTablesInitializer dataLoader,
             HiveMinioDataLake hiveMinioDataLake)
             throws Exception
     {
-        String basePath = "s3a://" + hiveMinioDataLake.getBucketName() + "/" + schemaName;
+        String basePath = "s3a://" + hiveMinioDataLake.getBucketName() + "/" + TPCH_SCHEMA;
         HdfsEnvironment hdfsEnvironment = getHdfsEnvironment(hiveMinioDataLake);
         Configuration configuration = hdfsEnvironment.getConfiguration(CONTEXT, new Path(basePath));
 
@@ -92,7 +75,7 @@ public final class S3HudiQueryRunner
                         .hdfsEnvironment(hdfsEnvironment)
                         .build());
         Database database = Database.builder()
-                .setDatabaseName(schemaName)
+                .setDatabaseName(TPCH_SCHEMA)
                 .setOwnerName(Optional.of("public"))
                 .setOwnerType(Optional.of(PrincipalType.ROLE))
                 .build();
@@ -103,16 +86,12 @@ public final class S3HudiQueryRunner
             // do nothing if database already exists
         }
 
-        DistributedQueryRunner queryRunner = builder(
-                testSessionBuilder()
-                        .setCatalog(catalogName)
-                        .setSchema(schemaName)
-                        .build())
+        DistributedQueryRunner queryRunner = builder(createSession())
                 .setExtraProperties(extraProperties)
                 .build();
         queryRunner.installPlugin(new TestingHudiPlugin(Optional.of(metastore)));
         queryRunner.createCatalog(
-                catalogName,
+                "hudi",
                 "hudi",
                 ImmutableMap.<String, String>builder()
                         .put("hive.s3.aws-access-key", MINIO_ACCESS_KEY)
@@ -122,8 +101,16 @@ public final class S3HudiQueryRunner
                         .putAll(connectorProperties)
                         .buildOrThrow());
 
-        dataLoader.initializeTables(queryRunner, metastore, HUDI_MINIO_TESTS, basePath, configuration);
+        dataLoader.initializeTables(queryRunner, metastore, TPCH_SCHEMA, basePath, configuration);
         return queryRunner;
+    }
+
+    private static Session createSession()
+    {
+        return testSessionBuilder()
+                .setCatalog("hudi")
+                .setSchema(TPCH_SCHEMA)
+                .build();
     }
 
     private static HdfsEnvironment getHdfsEnvironment(HiveMinioDataLake hiveMinioDataLake)
@@ -147,7 +134,7 @@ public final class S3HudiQueryRunner
     }
 
     public static void main(String[] args)
-            throws InterruptedException
+            throws Exception
     {
         Logging.initialize();
         Logger log = Logger.get(S3HudiQueryRunner.class);
@@ -155,22 +142,20 @@ public final class S3HudiQueryRunner
         String bucketName = "test-bucket";
         HiveMinioDataLake hiveMinioDataLake = new HiveMinioDataLake(bucketName);
         hiveMinioDataLake.start();
-
-        DistributedQueryRunner queryRunner = null;
-        try (DistributedQueryRunner runner = create(
-                HUDI_MINIO_TESTS.getCatalogName(),
-                HUDI_MINIO_TESTS.getSchemaName(),
+        /*
+         * Please set the below VM arguments for the main method to run:
+         *
+         * -ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+         *
+         * TODO: We need to set above arguments due to Hudi's deep reflection based ObjectSizeEstimator.
+         *       Higher versions of jdk block illegal reflective access. This will not be needed after
+         *       https://issues.apache.org/jira/browse/HUDI-4687 is fixed.
+         */
+        DistributedQueryRunner queryRunner = create(
                 ImmutableMap.of("http-server.http.port", "8080"),
                 ImmutableMap.of(),
-                new ResourceHudiTablesInitializer(),
-                hiveMinioDataLake)) {
-            queryRunner = runner;
-        }
-        catch (Throwable t) {
-            log.error(t);
-            System.exit(1);
-        }
-        Thread.sleep(100);
+                new TpchHudiTablesInitializer(COPY_ON_WRITE, TpchTable.getTables()),
+                hiveMinioDataLake);
 
         log.info("======== SERVER STARTED ========");
         log.info("\n====\n%s\n====", queryRunner.getCoordinator().getBaseUrl());
